[package]
name = "enderlook_arena"
version = "0.1.0"
edition = "2024"
authors = ["Enderlook"]
repository = "https://github.com/Enderlook/rust-arena"
documentation = "https://enderlook.github.io/rust-arena/"
license = "AGPL-3.0-only"
keywords = ["memory", "arena"]
categories = ["memory-management"]
rust-version = "1.95"

[package.metadata.docs.rs]
features = ["doc_cfg"]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[features]
default = ["once_cell"]
clone_to_uninit = ["ptr_metadata"]
ptr_metadata = []
once_lock = []
once_cell = ["dep:once_cell"]
doc_cfg = ["clone_to_uninit"]

[dependencies]
once_cell = { version = "1.21.4", optional = true, features = ["parking_lot"] }
parking_lot = "0.12.5"
